1: Add State to manage Field. 2: Add state and field unit test

--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -22,5 +22,9 @@
     "output": {
         "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/test",
         "enable_netcdf": true
+    },
+    "constants": {
+        "gravity": 9.81,
+        "Rd": 287.0
     }
 }
