--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(vvm_core STATIC
     Grid.cpp
     Field.cpp
     HaloExchanger.cpp
+    State.cpp
 )
 
 target_include_directories(vvm_core
