--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,15 +1,12 @@
 add_library(vvm_core STATIC
     State.cpp
     Grid.cpp
+    OutputManager.cpp
 )
 
-target_include_directories(vvm_core
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/../utils
-        ${MPI_INCLUDE_PATH}
+find_library(NVTOOLSEXT_LIBRARY nvToolsExt
+    HINTS /work/aaron900129/nvhpc_24_9/Linux_x86_64/24.9/cuda/lib64
 )
-
 find_library(NVCPUMATH_LIBRARY nvcpumath
     HINTS /work/aaron900129/nvhpc_23_9/Linux_x86_64/23.9/compilers/lib
 )
@@ -20,13 +17,30 @@ else()
     message(STATUS "Found NVIDIA CPU Math Library: ${NVCPUMATH_LIBRARY}")
 endif()
 
+if(NOT NVTOOLSEXT_LIBRARY)
+    message(FATAL_ERROR "Could not find NVIDIA Tools Extension Library (libnvToolsExt.so)")
+else()
+    message(STATUS "Found NVIDIA Tools Extension Library: ${NVTOOLSEXT_LIBRARY}")
+endif()
+
+
+target_include_directories(vvm_core
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../utils
+        ${MPI_INCLUDE_PATH}
+        ${PNETCDF_INCLUDE_DIR}
+)
+
+
 target_link_libraries(vvm_core
     PUBLIC
         MPI::MPI_CXX
-        ${NVCPUMATH_LIBRARY}
+	${NVCPUMATH_LIBRARY}
+        ${PNETCDF_LIBRARY}
     PRIVATE
         Kokkos::kokkos
         ${MPI_LIBRARIES}
         ${OpenMP_LIBRARIES}
-        nvToolsExt
+	${NVTOOLSEXT_LIBRARY}
 )
