1: BoundaryConditionManager-Implement vertical boundary condition. 2: BoundaryConditionManage-Implement vertical boundary condition. 3: Fix CMakeLists Structure. 4: Parameter-Move invariant things to parameter (dz, z, zflex)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,9 @@ else()
 endif()
 
 
+include_directories(${CMAKE_SOURCE_DIR}/src)
 add_subdirectory(src)
+
 
 # Build tests if requested
 if(BUILD_TESTS)
