--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -2,22 +2,24 @@
     "grid": {
         "nx": 16,
         "ny": 16,
-        "nz": 70,
+        "nz": 34,
         "n_halo_cells": 1,
         "dx": 200.0,
         "dy": 200.0,
-        "dz": 200.0
+        "dz": 500.0,
+        "dz1": 100.0
     },
     "simulation": {
         "total_time_s": 3600.0,
         "dt_s": 1.0,
         "output_interval_s": 300.0
     },
-    "physics": {
-
-    },
-    "solver": {
-
+    "initial_conditions": {
+        "format": "txt",
+        "source_file": "/work/aaron900129/VVM_GPU_CPP/data/initial_conditions/profile.txt",
+        "fields": [
+            "th"
+        ]
     },
     "output": {
         "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/test",
