--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(utils)
 add_subdirectory(core)
 add_subdirectory(io)
+add_subdirectory(dynamics)
 
 add_executable(vvm 
     main.cpp
@@ -22,4 +23,5 @@ target_link_libraries(vvm
         vvm_utils
         vvm_core
         vvm_io
+        vvm_dynamics
 )
