1: Fix advection for adding scaling factor for wind. 2: Add twisting term but haven't implemented. 3: Need to fix zeta, stretching, and twisting.

--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -62,6 +62,9 @@
                     },
                     "stretching": {
                         "spatial_scheme": "Takacs"
+                    },
+                    "twisting": {
+                        "spatial_scheme": "Takacs"
                     }
                 }
             },
@@ -73,6 +76,9 @@
                     },
                     "stretching": {
                         "spatial_scheme": "Takacs"
+                    },
+                    "twisting": {
+                        "spatial_scheme": "Takacs"
                     }
                 }
             },
@@ -83,6 +89,9 @@
                         "spatial_scheme": "Takacs"
                     },
                     "stretching": {
+                        "spatial_scheme": "Takacs"
+                    },
+                    "twisting": {
                         "spatial_scheme": "Takacs"
                     }
                 }
