Fix some governing equation differences and the correspoding methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(VVM LANGUAGES CXX)
+project(VVM LANGUAGES CXX C)
 
 cmake_policy(SET CMP0135 NEW)
 
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF) # Prefer standard C++ for portability
 
+set(HDF5_DIR "/work/aaron900129/hdf5_install/lib/cmake/hdf5")
 
 set(Kokkos_ENABLE_CUDA ON CACHE BOOL "Enable CUDA backend for Kokkos" FORCE)
 set(Kokkos_ENABLE_OPENMP ON CACHE BOOL "Enable OpenMP backend for Kokkos" FORCE)
@@ -16,11 +17,16 @@ message(STATUS "Build tests: ${BUILD_TESTS}")
 
 
 # Find MPI
-find_package(MPI REQUIRED)
+find_package(MPI REQUIRED COMPONENTS CXX C)
 if (MPI_FOUND)
+
     message(STATUS "MPI found: ${MPI_CXX_COMPILER}")
     message(STATUS "MPI CXX include path: ${MPI_CXX_INCLUDE_PATH}")
     message(STATUS "MPI CXX libraries: ${MPI_CXX_LIBRARIES}")
+    
+    if(TARGET MPI::MPI_C AND NOT TARGET MPI::MPI_C)
+        add_library(MPI::MPI_C ALIAS MPI::MPI_C)
+    endif()
 else()
     message(FATAL_ERROR "MPI not found. Please ensure MPI is installed and discoverable by CMake.")
 endif()
@@ -53,13 +59,23 @@ set(PNETCDF_LIBRARIES "-L${PNETCDF_INSTALL_DIR}/lib -lpnetcdf -lm")
 
 
 # Find ADIOS2
-find_package(ADIOS2 REQUIRED)
+find_package(ADIOS2 REQUIRED CXX MPI)
 if (ADIOS2_FOUND)
     message(STATUS "ADIOS2 found.")
 else()
     message(FATAL_ERROR "ADIOS2 not found.")
 endif()
+if(TARGET adios2::cxx11_mpi)
+    target_link_libraries(adios2::cxx11_mpi INTERFACE MPI::MPI_CXX)
+    message(STATUS "Manually linking MPI::MPI_CXX to adios2::cxx11_mpi target.")
+endif()
 
+find_package(HDF5 REQUIRED)
+if (HDF5_FOUND)
+    message(STATUS "HDF5 found at: ${HDF5_DIR}")
+else()
+    message(FATAL_ERROR "HDF5 not found at the specified path.")
+endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 add_subdirectory(src)
