Fix some bugs such as the iteration and implement all the dynamics. However the grid should be redesign due to the original VVM use weird index layout

--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -76,10 +76,38 @@
                     }
                 }
             },
+            "xi": {
+                "temporal_scheme": "AdamsBashforth2",
+                "tendency_terms": {
+                    "advection": {
+                        "spatial_scheme": "Takacs"
+                    },
+                    "stretching": {
+                        "spatial_scheme": "Takacs"
+                    },
+                    "twisting": {
+                        "spatial_scheme": "Takacs"
+                    }
+                }
+            },
             "eta": {
                 "temporal_scheme": "AdamsBashforth2",
                 "tendency_terms": {
+                    "advection": {
+                        "spatial_scheme": "Takacs"
+                    },
+                    "stretching": {
+                        "spatial_scheme": "Takacs"
+                    },
                     "twisting": {
+                        "spatial_scheme": "Takacs"
+                    }
+                }
+            },
+            "zeta": {
+                "temporal_scheme": "AdamsBashforth2",
+                "tendency_terms": {
+                    "advection": {
                         "spatial_scheme": "Takacs"
                     }
                 }
