Add buoyancy term but it's incorrect for now

--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -63,7 +63,7 @@
         }
     },
     "constants": {
-        "gravity": 9.81,
+        "gravity": 9.806,
         "Rd": 287.0
     },
     "dynamics": {
@@ -76,46 +76,13 @@
                     }
                 }
             },
-            "xi": {
-                "temporal_scheme": "AdamsBashforth2",
-                "tendency_terms": {
-                    "advection": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "stretching": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "twisting": {
-                        "spatial_scheme": "Takacs"
-                    }
-                }
-            },
             "eta": {
                 "temporal_scheme": "AdamsBashforth2",
                 "tendency_terms": {
-                    "advection": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "stretching": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "twisting": {
-                        "spatial_scheme": "Takacs"
-                    }
-                }
-            },
-            "zeta": {
-                "temporal_scheme": "AdamsBashforth2",
-                "tendency_terms": {
-                    "advection": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "stretching": {
-                        "spatial_scheme": "Takacs"
-                    },
-                    "twisting": {
-                        "spatial_scheme": "Takacs"
-                    }
+                    "buoyancy": { 
+                        "spatial_scheme": "Takacs",
+                        "time_scheme": "ForwardEuler" 
+                    } 
                 }
             }
         }
