--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,9 +1,13 @@
 set(VVM_UTILS_SOURCES
     ConfigurationManager.cpp
+    TimingManager.cpp
+    Timer.cpp
 )
 
 set(VVM_UTILS_HEADERS
     ConfigurationManager.hpp
+    TimingManager.hpp
+    Timer.hpp
 )
 
 add_library(vvm_utils STATIC
