--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -4,15 +4,15 @@
         "ny": 32,
         "nz": 33,
         "n_halo_cells": 2,
-        "dx": 100.0,
-        "dy": 100.0,
+        "dx": 500.0,
+        "dy": 500.0,
         "dz": 500.0,
         "dz1": 100.0
     },
     "simulation": {
-        "total_time_s": 300.0,
+        "total_time_s": 3000.0,
         "dt_s": 1.0,
-        "output_interval_s": 1.0
+        "output_interval_s": 50.0
     },
     "boundary_conditions": {
         "default": {
@@ -47,10 +47,7 @@
     },
     "initial_conditions": {
         "format": "txt",
-        "source_file": "/work/aaron900129/VVM_GPU_CPP/data/initial_conditions/profile.txt",
-        "fields": [
-            "th"
-        ]
+        "source_file": "/work/aaron900129/VVM_GPU_CPP/data/initial_conditions/profile.txt"
     },
     "output": {
         "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/test_uv5_sq",
