--- a/data/input_configs/default_config.json
+++ b/data/input_configs/default_config.json
@@ -4,13 +4,13 @@
         "ny": 32,
         "nz": 33,
         "n_halo_cells": 2,
-        "dx": 500.0,
-        "dy": 500.0,
+        "dx": 100.0,
+        "dy": 100.0,
         "dz": 500.0,
         "dz1": 100.0
     },
     "simulation": {
-        "total_time_s": 3000.0,
+        "total_time_s": 500.0,
         "dt_s": 1.0,
         "output_interval_s": 50.0
     },
@@ -70,7 +70,9 @@
     "dynamics": {
         "solver": {
             "w_solver_method": "tridiagonal",
-            "_w_solver_method_options": "Choose 'tridiagonal' (original) or 'jacobi' (3D parallel)"
+            "_w_solver_method_options": "Choose 'tridiagonal' (original) or 'jacobi' (3D parallel)",
+            "iteration": 200,
+            "WRXMU": 1e-4
         },
         "prognostic_variables": {
             "th": {
